--- a/bin/application/Main_Menu.fxml
+++ b/bin/application/Main_Menu.fxml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="application.MainController">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+   <children>
+      <AnchorPane prefHeight="400.0" prefWidth="400.0">
+         <children>
+            <Label layoutX="98.0" layoutY="80.0" text="Devam etmek için bir seçim yapınız" />
+            <Label layoutX="48.0" layoutY="32.0" text="Öğrenci değerlendirme sistemine hoş geldiniz.">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button layoutX="106.0" layoutY="112.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="170.0" text="Öğrenci Kayıt İşlemleri" />
+            <Button layoutX="106.0" layoutY="185.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="170.0" text="Hesaplama İşlemleri" />
+            <Button layoutX="106.0" layoutY="257.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" text="Raporlama İşlemleri" />
+            <Button layoutX="106.0" layoutY="323.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" text="Çıktı İşlemleri" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
