--- a/bin/application/Main_Menu.fxml
+++ b/bin/application/Main_Menu.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="400.0">
+      <AnchorPane prefHeight="400.0" prefWidth="400.0" styleClass="anchorpane">
          <children>
             <Label layoutX="98.0" layoutY="80.0" text="Devam etmek için bir seçim yapınız" />
             <Label layoutX="48.0" layoutY="32.0" text="Öğrenci değerlendirme sistemine hoş geldiniz.">
