--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,4 +1,6 @@
 .anchorpane  {
+	-fx-arrow-button-gap: 50px;
+	-fx-background-color: radial-gradient( focus-angle 100.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 100.0%, rgb(11,182,200) 0.0, rgb(0,0,0) 100.0 );
 	
 }
 .button:hover{
