--- a/bin/application/Main_Menu.fxml
+++ b/bin/application/Main_Menu.fxml
@@ -10,8 +10,8 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="400.0" styleClass="anchorpane">
          <children>
-            <Label layoutX="98.0" layoutY="80.0" text="Devam etmek için bir seçim yapınız" />
-            <Label layoutX="48.0" layoutY="32.0" text="Öğrenci değerlendirme sistemine hoş geldiniz.">
+            <Label layoutX="98.0" layoutY="80.0" text="Devam etmek için bir seçim yapınız" textFill="#f8f8f8" />
+            <Label layoutX="48.0" layoutY="32.0" text="Öğrenci değerlendirme sistemine hoş geldiniz." textFill="#d0d0d0">
                <font>
                   <Font size="16.0" />
                </font>
