--- a/src/application/application.css
+++ b/src/application/application.css
@@ -6,9 +6,9 @@
 .button:hover{
 	-fx-background-color: black ;
 	-fx-text-fill: white ;
-	-fx-border-style: dotted;
 	-fx-background-radius: 50px;
 } 
-.button{
-	-fx-border-style: dotted;
-}
+.button:click{
+	-fx-text-fill: beige ;
+	
+	}
