--- a/src/application/Main_Menu.fxml
+++ b/src/application/Main_Menu.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -34,15 +35,6 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="kokKayit" prefHeight="410.0" prefWidth="410.0" styleClass="anchorpane">
-         <children>
-            <Label alignment="CENTER" prefHeight="30.0" prefWidth="410.0" text="Çıktı İşlemleri" textFill="#f3ffa8">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
       <AnchorPane prefHeight="410.0" prefWidth="410.0" styleClass="anchorpane">
          <children>
             <Button layoutX="101.0" layoutY="101.0" mnemonicParsing="false" onAction="#raporlama" prefHeight="55.0" prefWidth="170.0" text="Raporlama İşlemleri" />
@@ -55,6 +47,27 @@
                </font>
             </Label>
             <Button layoutX="101.0" layoutY="317.0" mnemonicParsing="false" onAction="#cikti" prefHeight="55.0" prefWidth="170.0" text="Çıktı İşlemleri" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="kokKayit" prefHeight="410.0" prefWidth="410.0" styleClass="anchorpane">
+         <children>
+            <Label alignment="CENTER" prefHeight="30.0" prefWidth="410.0" text="Kayit İşlemleri" textFill="#f3ffa8">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField layoutX="109.0" layoutY="81.0" />
+            <Label layoutX="109.0" layoutY="57.0" text="Ad" />
+            <TextField layoutX="109.0" layoutY="153.0" />
+            <Label layoutX="109.0" layoutY="128.0" text="Soyad" />
+            <TextField layoutX="109.0" layoutY="217.0" />
+            <Label layoutX="109.0" layoutY="192.0" text="Numara" />
+            <TextField layoutX="109.0" layoutY="274.0" />
+            <Label layoutX="113.0" layoutY="251.0" text="Vize" />
+            <TextField layoutX="109.0" layoutY="331.0" />
+            <Label layoutX="109.0" layoutY="307.0" text="Final" />
+            <Button layoutX="268.0" layoutY="81.0" mnemonicParsing="false" prefHeight="274.0" prefWidth="42.0" text="Kayit" />
+            <Button layoutX="316.0" layoutY="81.0" mnemonicParsing="false" prefHeight="274.0" prefWidth="42.0" text="Geri" />
          </children>
       </AnchorPane>
    </children>
