--- a/bin/application/application.css
+++ b/bin/application/application.css
@@ -24,3 +24,8 @@
 	-fx-background-color:linear-gradient( from 0.0% 0.0% to 100.0% 100.0%, rgb(255,62,0) 0.0, rgb(0,0,0) 100.0);
 	-fx-text-fill: white ;
 }
+.button3{
+	-fx-background-color:radial-gradient( focus-angle 0.0deg, focus-distance 0.0%, center 50.0% 50.0%, radius 100.0%, rgb(19,199,66) 0.0, rgb(0,0,0) 100.0 );
+	-fx-text-fill: white ;
+	
+}
